# musicality

./: .gitignore  Makefile  README.md  setup.sh
backend/: pyproject.toml
backend/app/: dependencies.py  job_store.py  main.py  models.py  pipeline.py
backend/app/analysis/: models.py  pipeline.py  service.py
backend/app/api/: schemas.py
backend/app/beat_detection/: interface.py  madmom_detector.py  models.py
backend/app/downloader/: interface.py  models.py  ytdlp_downloader.py
backend/app/genre/: interface.py  models.py  static_provider.py
backend/app/instrument_analysis/: interface.py  models.py  onset_analyzer.py  pattern_smoother.py  signal_processing.py  subdivision_grid.py
backend/app/jobs/: in_memory_repository.py  interface.py  models.py
backend/app/routers/: analyze.py  audio.py  jobs.py
backend/app/separator/: demucs_separator.py  interface.py  models.py
backend/app/services/: beat_instrument_analyzer.py  beat_tracker.py  downloader.py  genre_templates.py  latin_section_mapper.py  section_analyzer.py  source_separator.py
frontend/src/: App.tsx
frontend/src/api/: analysisApi.ts  audioApi.ts  client.ts
frontend/src/components/: BeatCounter.css  BeatCounter.tsx  GenreToggle.tsx  InstrumentGrid.css  InstrumentGrid.tsx  PlayerControls.css  PlayerControls.tsx  ProcessingStatus.tsx  SectionTimeline.css  SectionTimeline.tsx  SongInfo.tsx  StemMixer.css  StemMixer.tsx  UrlForm.tsx
frontend/src/hooks/: useAnalysis.ts  useAudioPlayer.ts  useBeatSync.ts  useStemPlayer.ts
frontend/src/pages/: LandingPage.tsx  ResultsPage.tsx
(+4 files in other folders)
